--- a/src/app/battle/battle.component.html
+++ b/src/app/battle/battle.component.html
@@ -1,4 +1,6 @@
-<p>battle works!</p>
+<app-pokemon [pokemon]=battle.firstPokemon></app-pokemon>
+<app-pokemon [pokemon]=battle.secondPokemon></app-pokemon>
+
 <p>{{ battle.firstPokemon.name }} VS {{battle.secondPokemon.name}} </p>
 <button mat-button (click)="pauseGame()">{{ this.battle.isPaused == true ? 'START' : 'PAUSE' }}</button>
 
