--- a/src/app/battle/battle.component.html
+++ b/src/app/battle/battle.component.html
@@ -1,7 +1,7 @@
-<app-pokemon [pokemon]=battle.firstPokemon></app-pokemon>
-<app-pokemon [pokemon]=battle.secondPokemon></app-pokemon>
+<app-pokemon [pokemon]=battle.firstPokemon [back]=false></app-pokemon>
+<app-pokemon [pokemon]=battle.secondPokemon [back]=true></app-pokemon>
 
-<p>{{ battle.firstPokemon.name }} VS {{battle.secondPokemon.name}} </p>
+<p>{{ battle.firstPokemon.name }} VS {{battle.secondPokemon.name}}</p>
 <button mat-button (click)="pauseGame()">{{ this.battle.isPaused == true ? 'START' : 'PAUSE' }}</button>
 
 <ul>
