--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,2 +1,2 @@
 <p>{{ pokemon.name }} - {{ pokemon.hp}}</p>
-<img src="{{ pokemon.getImage(back) }}">
+<img src="{{ pokemonService.getImage(pokemon, back) }}">
