--- a/src/app/battle/battle.component.html
+++ b/src/app/battle/battle.component.html
@@ -1,9 +1,13 @@
-<app-pokemon [pokemon]=battleService.firstPokemon [back]=false></app-pokemon>
-<app-pokemon [pokemon]=battleService.secondPokemon [back]=true></app-pokemon>
+<div id="container">
+  <div id="battle">
+    <app-pokemon [pokemon]=battleService.firstPokemon [back]=false></app-pokemon>
+    <app-pokemon [pokemon]=battleService.secondPokemon [back]=true></app-pokemon>
 
-<p>{{ battleService.firstPokemon.name }} VS {{ battleService.secondPokemon.name }}</p>
-<button mat-button (click)="pauseGame()">{{ battleService.isPaused == true ? 'START' : 'PAUSE' }}</button>
+    <p>{{ battleService.firstPokemon.name }} VS {{ battleService.secondPokemon.name }}</p>
+    <button mat-button (click)="pauseGame()">{{ battleService.isPaused == true ? 'START' : 'PAUSE' }}</button>
 
-<ul>
-  <li *ngFor="let message of battleService.messageList">{{ message }}</li>
-</ul>
+    <ul>
+      <li *ngFor="let message of battleService.messageList">{{ message }}</li>
+    </ul>
+  </div>
+</div>
