--- a/src/app/battle-log/battle-log.component.html
+++ b/src/app/battle-log/battle-log.component.html
@@ -1,3 +1,3 @@
 <ul>
-    <li *ngFor="let message of battleLogService.messageList">{{ message }}</li>
+    <li *ngFor="let message of battleLogService.messageList" [innerHTML]="message"></li>
 </ul>
