--- a/src/app/battle/battle.component.html
+++ b/src/app/battle/battle.component.html
@@ -1,7 +1,17 @@
 <div id="container">
   <div id="battle">
-    <app-pokemon [pokemon]=battleService.firstPokemon [back]=false></app-pokemon>
-    <app-pokemon [pokemon]=battleService.secondPokemon [back]=true></app-pokemon>
-<button mat-button (click)="pauseGame()">{{ battleService.isPaused == true ? 'START' : 'PAUSE' }}</button>
+    <div id="firstPokemon">
+      <app-pokemon [pokemon]=battleService.firstPokemon [back]=false></app-pokemon>
+    </div>
+    <div id="secondPokemon">
+      <app-pokemon [pokemon]=battleService.secondPokemon [back]=true></app-pokemon>
+    </div>
+  </div>
+</div>
+<div>
+    <p  style="text-align:center"><button mat-button (click)="pauseGame()">{{ battleService.isPaused == true ? 'START' : 'PAUSE' }}</button></p>
 <p>{{ dateStartBattle | date:'medium' }}</p>
 <app-battle-log></app-battle-log>
+</div>
+
+
