--- a/src/app/battle/battle.component.html
+++ b/src/app/battle/battle.component.html
@@ -1,3 +1,4 @@
+<div id="page">
 <div id="container">
   <div id="battle">
     <div id="firstPokemon">
@@ -13,5 +14,5 @@
 <p>{{ dateStartBattle | date:'medium' }}</p>
 <app-battle-log></app-battle-log>
 </div>
-
+</div>
 
