--- a/src/app/battle/battle.component.css
+++ b/src/app/battle/battle.component.css
@@ -1,13 +1,11 @@
 #container {
   display: flex;
   justify-content: center;
-  
 }
-
 #battle  {
-   background-image: url("/assets/battle_background.png");
-   background-size: cover;
-   width: 35% ;
+  background-image: url("/assets/battle_background.png");
+  background-size: cover;
+  width: 35% ;
 }
 #firstPokemon {
   margin-left: 70%;
@@ -20,9 +18,10 @@
   text-align: center;
 }
 #page {
-     background-image: url("/assets/pokemon_background.jpg");
-     background-size: cover;
-     height: 100%;
-     width: 100%;
-
+  padding: 0;
+  margin: 0;
+  background-image: url("/assets/pokemon_background.jpg");
+  background-size: cover;
+  height: 100%;
+  width: 100%;
 }
