Make pokemon great again

--- a/src/app/pokemon-list/pokemon-list.component.css
+++ b/src/app/pokemon-list/pokemon-list.component.css
@@ -11,3 +11,22 @@
 .pokemonDisplay:hover{
     background: lightgrey;
 }
+[type=radio] { 
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+[type=radio] + img {
+cursor: pointer;
+}
+
+[type=radio]:checked + .infos {
+background: lightblue;
+}
+
+.name {
+    font-family: Arial;
+    text-transform: capitalize;
+}
