modified loading screen

--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -17,4 +17,4 @@
     </label>
 </div>
 
-<button (click)="launchBattle()" [disabled]="checkIfPokemonSelected()">Lancer le combat</button>
+<p><button (click)="launchBattle()" [disabled]="checkIfPokemonSelected()">Lancer le combat</button></p>
