--- a/src/app/battle/battle.component.html
+++ b/src/app/battle/battle.component.html
@@ -1,6 +1,6 @@
 <div id="page">
   <div class="title">
-    <marquee><h1>POKEMON XTREM BATTLE SIMULATOR 3000</h1></marquee>
+    <marquee><h1>🔥 POKEMON XTREM BATTLE SIMULATOR 3000🔥 </h1></marquee>
   </div>
   <div id="container">
     <div id="battle">
